--- a/vision/public/index.html
+++ b/vision/public/index.html
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- 一旦通过script标签引入echarts.js文件之后，windows.echarts 就会存在 -->
+    <script src="./static/lib/echarts.min.js"></script>
   </body>
 </html>
