--- a/vision/public/index.html
+++ b/vision/public/index.html
@@ -15,5 +15,6 @@
     <!-- built files will be auto injected -->
     <!-- 一旦通过script标签引入echarts.js文件之后，windows.echarts 就会存在 -->
     <script src="./static/lib/echarts.min.js"></script>
+    <script src="./static/theme/chalk.js"></script>
   </body>
 </html>
